--- a/expensify/src/index.css
+++ b/expensify/src/index.css
@@ -10,6 +10,37 @@ body {
   font-size: 1.6rem;
   line-height: 1.6; }
 
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw; }
+
+.loader__image {
+  height: 6rem;
+  width: 6rem; }
+
+.box-layout {
+  align-items: center;
+  background: url("images/bg.jpg");
+  background-size: cover;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  width: 100vw; }
+
+.box-layout__box {
+  background: rgba(255, 255, 255, 0.85);
+  border-radius: 3px;
+  padding: 3.2rem 1.6rem;
+  text-align: center;
+  width: 25rem; }
+
+.box-layout__title {
+  margin: 0 0 1.6rem 0;
+  line-height: 1; }
+
 button {
   cursor: pointer; }
 
